# EVEEX-Code

./: .gitignore  README.md
C-POO/c_prototype/: CMakeLists.txt
C-POO/c_prototype/test/: CMakeLists.txt  image_test.c
C-POO/c_prototype/types/: Bitstream.h  DictionaryItem.h  Image.c  Image.r  Object.c  Pixel.c  Pixel.h  Pixel.r
C-POO/first_step/: class.h
C-POO/second_step/: CMakeLists.txt  Dictionary.c  List.c  List.h  List.r  Object.c  Object.h  Point.c  Point.h  main.c
c_prototype/: CMakeLists.txt  Makefile  bitstream.c  bitstream.h  credits.txt  dictionary.c  dictionary.h  eveex-x86  huffman.c  huffman.h  image.c  image.h  list.c  list.h  main.c
c_prototype/data_types/: bitstream.c  bitstream.h  dictionary.c  image.c  list.h
c_prototype/lib/: client.c  client.h  decoder.c  decoder.h  encoder.c  encoder.h  huffman.c  huffman.h  logger.c  logger.h  server.c  server.h
c_prototype/test/: CMakeLists.txt  bitstream_test.c  client_test.c  dct_test.c  dico_test.c  huffman_test.c  list_test.c  node_test.c  pixel_test.c  point_test.c  server_test.c
c_prototype/types/: Bitstream.c  Bitstream.r  Dictionary.c  Dictionary.h  Dictionary.r  DictionaryItem.c  Image.c  Image.h  List.c  List.h  List.r  Native.c  Native.h  Native.r  Node.c  Node.h  Node.r  Object.c  Object.h  Object.r  Pixel.c  Pixel.r  Point.c
go_prototype/: build_riscv.sh  cpuprofile.prof  eveex  eveex-arm  go.mod  go.sum  main.go  utils.go
go_prototype/cmd/: decode.go  encode.go  network.go  root.go  utils.go
go_prototype/pkg/decoder/: bitstream.go  decoder.go
go_prototype/pkg/encoder/: bitstream.go  encoder.go  encoder_test.go  img_encoder.go  rlepairs.go
go_prototype/pkg/huffman/: huffman.go  huffman_test.go  treeprinting.go  utils.go
go_prototype/pkg/image/: image.go  image_test.go  pixel.go
go_prototype/pkg/network/: client.go  server.go
go_prototype/pkg/types/: rlepairs.go
huffman/: huffman.py  main.py
jpg_bitstream/: color_utils.py  main.py
python_prototype/: README.md  Stats_DCT.py  bitstream.py  bitstream_test.txt  decoder.py  encoder.py  eveex.py  huffman.py  iDTT.py  image_desc.json  image_generator.py  image_visualizer.py  logger.py  main.py  main_iDTT.py  network_transmission.py  requirements.txt  setup.py
python_prototype/EVEEX/: READ_ME_démo_RPi.txt  READ_ME_test_vidéo.txt  Stats_DCT.py  Stats_DCT_larger_scale.py  __init__.py  bitstream.py  bitstream_RPi.py  bitstream_test.txt  decoder.py  encoder.py  eveex.py  huffman.py  image_generator.py  image_visualizer.py  main.py  main_PC_recepteur.py  main_RPi_emettrice.py  main_emetteur_video.py  main_iDTT.py  main_recepteur_video.py  network_transmission.py  requirements.txt  test_PiCamera.py  test_emetteur.py  test_recepteur.py  video_handler.py  video_to_frame.py
rapports et comptes rendus/: modèle_CR9.md  séance_15_septembre.md
testing/huffman/: huffman.py
testing/webcam capture/: webcam-capture.py
tests_c/: CMakeLists.txt
tests_c/c_prototype_old/: CMakeLists.txt  encoder.c  encoder.h  huffman.c  huffman.h  main.c  utils.h
tests_c/c_prototype_old/data_types/: bitstream.h  dictionary.h  image.c  image.h  list.c  list.h
tests_c/first_step/: Point.c  Point.h  String.c  String.h  main.c  new.c  new.h
tests_c/second_step/: CMakeLists.txt  Dictionary.h  Dictionary.r  DictionaryItem.r  List.c  Object.r  Point.c  Point.h  Point.r
webcam capture/: color_utils.py
